--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         }
      
 // Function to show or hide the 3x badge
-        function toggleBadge(show) {
+        function toggleBadge(hide) {
             const badge = document.getElementById('badge');
             badge.style.display = show ? 'inline-flex' : 'none';
         }
@@ -426,7 +426,7 @@
 
         <!-- Announcement Box -->
         <div id="announcement" class="announcement">
-            <p>Our new <a href="/rain">Robux Rain</a> feature is live— get ready for a shower of earnings!</p>
+            <p>Redeem <a href="/rain">Promocode</a> "DALENTINE" for 140 R$!</p>
         </div>
         
         <h1>
@@ -448,15 +448,15 @@
         <h1>Statistics</h1>
         <div class="counter">
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">817M+</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">1.87B+</div>
                 <div class="paid-out">GLOBAL PAYOUTS</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">2.01B+</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">4.75B+</div>
                 <div class="paid-out">GLOBAL WAGERED</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">40.2M+</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">182M+</div>
                 <div class="paid-out">GLOBAL RAINED</div>
             </div>
         </div>
