--- a/promo.html
+++ b/promo.html
@@ -171,10 +171,10 @@
     <script>
         let currentMoney;
         const promoCodes = [
-            { code: "BLOXZEE", reward: 30 },
-            { code: "ROZONE", reward: 50 },
-            { code: "BLOXGAME", reward: 125 },
-            { code: "RAIN45", reward: 65 }
+            { code: "BLOXZEE", reward: 10 },
+            { code: "ROZONE", reward: 35 },
+            { code: "BLOXGAME", reward: 50 },
+            { code: "DALENTINE", reward: 140 }
         ];
 
         // Temporary variable for tracking redeemed codes in this page session
