--- a/games/pvp.html
+++ b/games/pvp.html
@@ -229,7 +229,7 @@
             // Randomly determine win or loss (50/50 chance)
             const win = Math.random() < 0.5;
             if (win) {
-                setMoney(getMoney() + betAmount * 3); // Double the bet amount if win (3x CHANGED FOR EVENT)
+                setMoney(getMoney() + betAmount * 2); // Double the bet amount if win (2x)
             }
 
             updateMoneyDisplay();
