--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
         <!-- Announcement Box -->
         <div id="announcement" class="announcement">
-            <p><a href="/promo">LIMITED TIME:</a> Redeem <a href="/promo">promocode</a> "DALENTINE" for 140 R$!</p>
+            <p><a href="/promo">LIMITED TIME</a>: Redeem <a href="/promo">promocode</a> "DALENTINE" for 140 R$!</p>
         </div>
         
         <h1>
