--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         }
      
 // Function to show or hide the 3x badge
-        function toggleBadge(hide) {
+        function toggleBadge(show) {
             const badge = document.getElementById('badge');
             badge.style.display = show ? 'inline-flex' : 'none';
         }
@@ -426,14 +426,14 @@
 
         <!-- Announcement Box -->
         <div id="announcement" class="announcement">
-            <p><a href="/promo">LIMITED TIME</a>: Redeem <a href="/promo">promocode</a> "DALENTINE" for 140 R$!</p>
+            <p>ENJOY <a href="/rain">100K+ </a>RAIN UNTIL FEB 14TH!</p>
         </div>
         
         <h1>
             Popular Games 
             <div id="badge" class="badge" style="display: none;">
                 <img src="cash.svg" alt="Cash Icon">
-                <span>3x Rewards!</span>
+                <span>100K+ Rain!</span>
             </div>
         </h1>
 
