--- a/extras/spotify.html
+++ b/extras/spotify.html
@@ -117,7 +117,7 @@
         <div class="profile-section">
             <div class="profile-picture">
                 <img aria-hidden="false" draggable="false"
-                     src="scythe.png" 
+                     src="pfp.png" 
                      alt="PFP">
             </div>
             <div class="artist-details">
