--- a/extras/spotify.html
+++ b/extras/spotify.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$cythe - Spotify</title>
+    <title>$yreem - Spotify</title>
     <style>
         /* Import Circular Spotify Text font */
         @font-face {
@@ -117,7 +117,7 @@
         <div class="profile-section">
             <div class="profile-picture">
                 <img aria-hidden="false" draggable="false"
-                     src="pfp.png" 
+                     src="pfp2.png" 
                      alt="PFP">
             </div>
             <div class="artist-details">
