--- a/extras/tiktok.html
+++ b/extras/tiktok.html
@@ -33,7 +33,7 @@
             width: 120px;
             height: 120px;
             border-radius: 50%;
-            background-image: url('scythe.png');
+            background-image: url('pfp.png');
             background-size: cover;
             background-position: center;
             margin: 0 auto;
@@ -233,10 +233,10 @@
 
     <div class="profile-container">
         <div class="profile-pic"></div>
-        <div class="profile-name">$cythe
+        <div class="profile-name">Syreem
             <span class="verified-icon"><i class="fas fa-check"></i></span>
         </div>
-        <div class="profile-username">@scythe</div>
+        <div class="profile-username">@SyreemPsycho</div>
 
         <div class="followers-info">
             <div>
