--- a/extras/spotify.html
+++ b/extras/spotify.html
@@ -121,7 +121,7 @@
                      alt="PFP">
             </div>
             <div class="artist-details">
-                <h1 class="artist-name">$yreem</h1>
+                <h1 class="artist-name">virgil?</h1>
                 <p class="monthly-listeners" id="counter">0 monthly listeners</p>
             </div>
         </div>
